typescript/checker/tests/conformance/types/tuple/wideningTuples3.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            121,
        ),
        hi: BytePos(
            122,
        ),
        ctxt: #0,
    },
    left: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    103,
                ),
                hi: BytePos(
                    108,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                104,
                            ),
                            hi: BytePos(
                                107,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
            ],
        },
    ),
    right: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    125,
                ),
                hi: BytePos(
                    142,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                126,
                            ),
                            hi: BytePos(
                                135,
                            ),
                            ctxt: #0,
                        },
                        kind: TsUndefinedKeyword,
                    },
                ),
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                137,
                            ),
                            hi: BytePos(
                                141,
                            ),
                            ctxt: #0,
                        },
                        kind: TsNullKeyword,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:9
  |
4 | var b = a = [undefined, null];
  |         ^

error: ImplicitAny {
    span: Span {
        lo: BytePos(
            117,
        ),
        hi: BytePos(
            118,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:5
  |
4 | var b = a = [undefined, null];
  |     ^

